parameter handling refactored