@@ -30,6 +30,8 @@
                 <configuration>
                     <argLine>
                 --add-opens jamal.ruby/javax0.jamal.ruby=ALL-UNNAMED
+                          --add-opens java.base/sun.nio.ch=org.jruby.complete
+                          --add-opens java.base/java.io=org.jruby.complete
             </argLine>
                 </configuration>
             </plugin>
